versioned_docs/version-2.5/reference/subsystems/black.mdx
---
title: black
description: |
  The Black Python code formatter (https://black.readthedocs.io/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Black Python code formatter (https://black.readthedocs.io/).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[black]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--black-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_BLACK_ARGS'
  toml_repr={`[black]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Black, e.g. `--black-args="--target-version=py37 --quiet"`

</Option>

### `skip`

<Option
  cli_repr={`--[no-]black-skip`}
  env_repr='PANTS_BLACK_SKIP'
  toml_repr={`[black]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use Black when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`

</Option>

## Advanced options

### `config`

<Option
  cli_repr={`--black-config=<file_option>`}
  env_repr='PANTS_BLACK_CONFIG'
  toml_repr={`[black]
config = <file_option>`}
  default_repr={`None`}
>

Path to a TOML config file understood by Black (https://github.com/psf/black#configuration-format).

Setting this option will disable `[black].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]black-config-discovery`}
  env_repr='PANTS_BLACK_CONFIG_DISCOVERY'
  toml_repr={`[black]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include any relevant pyproject.toml config files during runs.

Use `[black].config` instead if your config is in a non-standard location.

</Option>

### `console_script`

<Option
  cli_repr={`--black-console-script=<str>`}
  env_repr='PANTS_BLACK_CONSOLE_SCRIPT'
  toml_repr={`[black]
console_script = <str>`}
  default_repr={`black`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--black-entry-point=<str>`}
  env_repr='PANTS_BLACK_ENTRY_POINT'
  toml_repr={`[black]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--black-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BLACK_EXTRA_REQUIREMENTS'
  toml_repr={`[black]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "setuptools"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--black-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BLACK_INTERPRETER_CONSTRAINTS'
  toml_repr={`[black]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.6"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `version`

<Option
  cli_repr={`--black-version=<str>`}
  env_repr='PANTS_BLACK_VERSION'
  toml_repr={`[black]
version = <str>`}
  default_repr={`black==20.8b1`}
>

Requirement string for the tool.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
